Fix: layout shift on DropDown Open

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@
     background-size: cover, cover;
     user-select: none;
   }
+  body > div {
+    overflow: hidden;
+  }
 }
 
 /* Add reusable component classes */
